--- a/css/components/_dialog.scss
+++ b/css/components/_dialog.scss
@@ -50,7 +50,7 @@
         }
     }
 
-    .word {
+    .correct-word {
         font-size: 20px;
         color: get-color('blue');
         margin-left: 4px;
